[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/InteractableObject.gd" type="Script" id=2]
[ext_resource path="res://src/resources/sprite_outline.gdshader" type="Shader" id=3]

[sub_resource type="CapsuleShape2D" id=3]
radius = 19.0
height = 6.0

[sub_resource type="ShaderMaterial" id=4]
resource_local_to_scene = true
shader = ExtResource( 3 )
shader_param/color = Color( 0, 0, 0, 1 )
shader_param/thickness = 1.0

[node name="InteractableObject" type="Area2D"]
collision_layer = 8
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 4 )

[connection signal="body_entered" from="." to="." method="_on_InteractableObject_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_InteractableObject_body_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_InteractableObject_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_InteractableObject_mouse_exited"]
